# hello-fastapi

./: LICENSE  README.md  pyproject.toml
src/: app.py
