[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello_fastapi"
description = "Quick hello world with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ['version']
license = "MIT"
authors = [
    { name = "Cristina Grande" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "fastapi>=0.115.12"
]

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.wheel]
include = ["/src"]